--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <p>¿Por qué no me han contactado? 😢</p>
 
     <a href="/landing">
-        <button>LANDING</button>
+        <button>https://sergioflo19.github.io/prueba-1/landing</button>
     </a>
 
     <!-- Botón flotante de WhatsApp -->
