--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <img src="https://img7.thuthuatphanmem.vn/uploads/2023/08/19/meme-meo-buon-khoc-cute_102656646.jpg" alt="gato llorando" style="width: 300px; height: auto;">
     <p>¿Por qué no me han contactado? 😢</p>
 
-    <a href="/landing">
-        <button>/prueba-1/landing"</button>
+    <a href="/prueba-1/landing"">
+        <button>landing"</button>
     </a>
 
     <!-- Botón flotante de WhatsApp -->
