--- a/landing.html
+++ b/landing.html
@@ -4,9 +4,9 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>SMO - Soluciones Industriales</title>
-  <link rel="icon" href="/static/img/smofavicon.png" type="image/png" />
+  <link rel="icon" href="/prueba-1/static/img/smofavicon.png" type="image/png" />
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet"/>
-  <link rel="stylesheet" href="/static/landing.css">
+  <link rel="stylesheet" href="/prueba-1/static/landing.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"/>
 </head>
 <body>
@@ -20,7 +20,7 @@
 
     <!-- Fila inferior -->
     <div class="header-main">
-      <img src="/static/img/ISOLOGO SMO,S.A.png" alt="Logo SMO" />
+      <img src="/prueba-1/static/img/ISOLOGO SMO,S.A.png" alt="Logo SMO" />
       <nav>
         <ul>
           <li><a href="#">Inicio</a></li>
